--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-pokemonred.gb
-pokemonblue.gb
+Pokemon - Red Version (USA, Europe) (SGB Enhanced).gb
+Pokemon - Blue Version (USA, Europe) (SGB Enhanced).gb
 flips
 rgbds
 *.tar.xz
