--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "poke-solus-fr-rse"]
-	path = poke-solus-fr-rse
-	url = git@github.com:persuaded9041/poke-solus-fr-rse.git
+[submodule "poke-solus-fr"]
+	path = poke-solus-fr
+	url = git@github.com:persuaded9041/poke-solus-fr.git
